@@ -62,7 +62,7 @@ the API is complete. It just means we won't break what currently exists.
 * GPU Allocators      v1.0.0 (pl_gpu_allocators_ext.h)
 * Graphics            v1.5.0 (pl_graphics_ext.h)
 * Image               v1.0.0 (pl_image_ext.h)
-* Job                 v2.1.0 (pl_job_ext.h)
+* Job                 v2.2.0 (pl_job_ext.h)
 * Atomics             v1.0.0 (pl_platform_ext.h)
 * File                v1.1.0 (pl_platform_ext.h)
 * Network             v1.0.0 (pl_platform_ext.h)
