@@ -6,6 +6,7 @@ Below is the change log for typical users. Minor and older changes stripped
 away, please see git history for details.
 
 - v0.6.2 (2025-xx-xx) (draw) performance improvements
+                      (job) main thread will be used when waiting on counter
 - v0.6.1 (2025-09-26) (renderer) add iridescence support
                       (renderer) add linear & exp height fog
                       (renderer) add bloom
